简化了一下布局文件

--- a/yxyl/app/src/main/AndroidManifest.xml
+++ b/yxyl/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Login" />
         <activity android:name=".ForgetPassword" />
-        <activity android:name=".Register"></activity>
+        <activity android:name=".Register" />
+        <activity android:name=".ResetPassword"></activity>
     </application>
 
 </manifest>
