--- a/yxyl/app/src/main/AndroidManifest.xml
+++ b/yxyl/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,13 @@
         <activity android:name=".Register" />
         <activity android:name=".ResetPassword" />
         <activity android:name=".JoinClass" />
-        <activity android:name=".CommitName"></activity>
+        <activity android:name=".CommitName" />
+        <activity android:name=".Guide" />
+        <activity
+            android:name=".Basepage"
+            android:label="@string/title_activity_basepage"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".CompleteMessage"></activity>
     </application>
 
 </manifest>
