--- a/learnStyle/app/src/main/AndroidManifest.xml
+++ b/learnStyle/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="du.com.learnstyle">
-
+<!--   android:theme="@style/AppTheme"-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
