--- a/yxyl/app/src/main/AndroidManifest.xml
+++ b/yxyl/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="yanxiu.com.yxyl">
-
+    <uses-permission android:name="android.permission.INTERNET">
+    </uses-permission>
     <!-- android:theme="@style/AppTheme" -->
     <application
         android:allowBackup="true"
