--- a/yxyl/app/src/main/AndroidManifest.xml
+++ b/yxyl/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="yanxiu.com.yxyl">
+    package="yanxiu.com.yxyl"
+    android:versionCode="1"
+    android:versionName="V1.0">
     <uses-permission android:name="android.permission.INTERNET">
+    </uses-permission>
+    <uses-permission android:name="android.permission.CALL_PHONE">
     </uses-permission>
     <!-- android:theme="@style/AppTheme" -->
     <application
